# ROS_HRI

./: README.md  requirements.txt
src/: main.py  utils.py
src/handGesture/: handPose.py  poses.txt
src/handGesture/utils/: detector_utils.py  label_map_util.py
src/headpose/: __init__.py  dectect.py  headPose.py
src/hri_msg/: CMakeLists.txt  package.xml
src/hri_msg/msg/: JointAngles.msg  JointVelocity.msg
src/hri_msg/srv/: SaveHands.srv
src/humanpose/: __init__.py  skeletonPose.py  val.py  with_mobilenet.py
src/humanpose/modules/: pose.py
src/kinovaControl/: joint_control.py
src/test/: live_plot.py  test_headPose_webcam.py  test_skeletonPose_webcam.py
